--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=TaskXcel
 
 spring.datasource.url=jdbc:mysql://localhost:3306/taskXcel?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username= root
-spring.datasource.password= rooooot
+spring.datasource.password= ubt.2000
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
